створено вкладку mobile-menu

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import "./components/social";
 @import "./components/logo-header";
 @import "./components/logo-footer";
+@import "./components/mobile-menu";
 @import "./components/backdrop";
 
 @import "./layout/header";
