--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,4 +1,5 @@
 .header {
+  position: relative;
   padding-top: 10px;
   padding-bottom: 10px;
   border-bottom: 1px solid #ececec;
@@ -32,6 +33,7 @@
   padding: 0;
   margin: 0;
   border: none;
+  line-height: 0;
   background-color: var(--fone-background-color);
 
   &:hover,
