--- a/css/main.css
+++ b/css/main.css
@@ -163,125 +163,95 @@ img {
   color: var(--main-text-color);
 }
 
-.mobile-menu__container {
-  position: relative;
-  padding-top: 48px;
-  padding-left: 25px;
-  padding-bottom: 48px;
-}
-
-@media screen and (min-width: 768px) {
-  .mobile-menu__container {
-    display: none;
+@media screen and (max-width: 767px) {
+  .mobile-menu {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: auto;
+    background-color: var(--fone-background-color);
   }
-}
-
-@media screen and (min-width: 1200px) {
   .mobile-menu__container {
-    display: none;
+    position: relative;
+    padding-top: 48px;
+    padding-left: 40px;
+    padding-bottom: 48px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
   }
-}
-
-.mobile-menu {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  overflow: auto;
-  background-color: var(--fone-background-color);
-}
-
-.mobile-menu.is-open {
-  opacity: 1;
-  visibility: visible;
-  pointer-events: auto;
-}
-
-.mobile-menu__close-btn {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  padding: 0;
-  border: none;
-  line-height: 0;
-  background-color: transparent;
-}
-
-.mobile-menu__close-btn:hover, .mobile-menu__close-btn:focus {
-  fill: var(--button-color);
-  outline: none;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.mobile-menu__item:not(:last-child) {
-  margin-bottom: 32px;
-}
-
-.mobile-menu__link {
-  margin-bottom: 32px;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 40px;
-  line-height: 1.18;
-  letter-spacing: 0.02em;
-  color: var(--title-text-color);
-}
-
-.current {
-  color: var(--akcent-text-color);
-}
-
-.mobile-menu__tel {
-  margin-top: 302px;
-  margin-bottom: 32px;
-}
-
-.mobile-menu__tel-link {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 34px;
-  line-height: 1.18;
-  letter-spacing: 0.02em;
-  color: var(--akcent-text-color);
-}
-
-.mobile-menu__mail-link {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 1.17;
-  letter-spacing: 0.02em;
-  color: var(--primary-text-color);
-}
-
-.mobile-menu__social {
-  display: flex;
-  justify-content: flex-start;
-}
-
-.mobile-menu__social-item {
-  margin-top: 64px;
-}
-
-.mobile-menu__social-link {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 1.22;
-  letter-spacing: 0.02em;
-  color: var(--akcent-text-color);
-}
-
-.mobile-menu__social-link::after {
-  content: "";
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  transform: rotate(90deg);
-  margin-left: 10px;
-  margin-right: 10px;
+  .mobile-menu.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  }
+  .mobile-menu__close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    padding: 0;
+    border: none;
+    line-height: 0;
+    background-color: transparent;
+  }
+  .mobile-menu__close-btn:hover, .mobile-menu__close-btn:focus {
+    fill: var(--button-color);
+    outline: none;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .mobile-menu__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+  .mobile-menu__link {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.18;
+    letter-spacing: 0.02em;
+    color: var(--title-text-color);
+  }
+  .mobile-menu__item .current {
+    color: var(--akcent-text-color);
+  }
+  .mobile-menu__tel-link {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.18;
+    letter-spacing: 0.02em;
+    color: var(--akcent-text-color);
+  }
+  .mobile-menu__mail-link {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: var(--primary-text-color);
+  }
+  .mobile-menu__social {
+    display: flex;
+    justify-content: flex-start;
+  }
+  .mobile-menu__social-link {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    color: var(--akcent-text-color);
+    margin-right: 10px;
+  }
+  .mobile-menu__social-item:not(:last-child) {
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+    margin-right: 10px;
+  }
 }
 
 .backdrop {
@@ -481,23 +451,7 @@ img {
 
 .header {
   position: relative;
-  padding-top: 10px;
-  padding-bottom: 10px;
   border-bottom: 1px solid #ececec;
-}
-
-@media screen and (min-width: 768px) {
-  .header {
-    padding-top: 21px;
-    padding-bottom: 21px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .header {
-    padding-top: 24px;
-    padding-bottom: 24px;
-  }
 }
 
 .header__container {
@@ -506,31 +460,87 @@ img {
   align-items: center;
 }
 
-.nav-list {
-  display: none;
+@media screen and (max-width: 768px) {
+  .header {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .header__nav-list {
+    display: none;
+  }
+  .header__contacts-list {
+    display: none;
+  }
+  .header__menu-burger-btn {
+    padding: 0;
+    margin: 0;
+    border: none;
+    line-height: 0;
+    background-color: var(--fone-background-color);
+  }
+  .header__menu-burger-btn:hover, .header__menu-burger-btn:focus {
+    fill: var(--button-color);
+    outline: none;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
-.header__contacts-list {
-  display: none;
-}
-
-.header__menu-burger-btn {
-  padding: 0;
-  margin: 0;
-  border: none;
-  line-height: 0;
-  background-color: var(--fone-background-color);
-}
-
-.header__menu-burger-btn:hover, .header__menu-burger-btn:focus {
-  fill: var(--button-color);
-  outline: none;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+  .header {
+    padding-top: 21px;
+    padding-bottom: 21px;
+  }
+  .header__contacts-list {
+    display: flex;
+  }
+  .header__nav-list {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 88px;
+  }
+  .header__nav-item {
+    position: relative;
+  }
+  .header__menu-burger-btn {
+    display: none;
+  }
+  .header__nav-link {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--title-text-color);
+  }
+  .header__nav-link:hover, .header__nav-link:focus {
+    color: var(--akcent-text-color);
+  }
+  .header__navigation {
+    display: flex;
+    align-items: center;
+  }
+  .current {
+    color: var(--akcent-text-color);
+  }
+  .current::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--social-akcent-color);
+    bottom: -27px;
+    left: 0;
+  }
 }
 
 @media screen and (min-width: 1200px) {
-  .header__menu-burger-btn {
-    display: none;
+  .header {
+    padding-top: 24px;
+    padding-bottom: 24px;
   }
 }
 
