--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,118 +1,104 @@
-.mobile-menu__container {
-  position: relative;
-  padding-top: 48px;
-  padding-left: 25px;
-  padding-bottom: 48px;
-
-  @media screen and (min-width: 768px) {
-    display: none;
+// 0-767
+@media screen and (max-width: 767px) {
+  .mobile-menu {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: auto;
+    background-color: var(--fone-background-color);
   }
 
-  @media screen and (min-width: 1200px) {
-    display: none;
+  .mobile-menu__container {
+    position: relative;
+    padding-top: 48px;
+    padding-left: 40px;
+    padding-bottom: 48px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
   }
-}
 
-.mobile-menu {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  overflow: auto;
-  background-color: var(--fone-background-color);
-}
-
-.mobile-menu.is-open {
-  opacity: 1;
-  visibility: visible;
-  pointer-events: auto;
-}
-
-.mobile-menu__close-btn {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  padding: 0;
-  border: none;
-  line-height: 0;
-  background-color: transparent;
-
-  &:hover,
-  &:focus {
-    fill: var(--button-color);
-    outline: none;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  .mobile-menu.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
   }
-}
 
-.mobile-menu__item:not(:last-child) {
-  margin-bottom: 32px;
-}
+  .mobile-menu__close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    padding: 0;
+    border: none;
+    line-height: 0;
+    background-color: transparent;
 
-.mobile-menu__link {
-  margin-bottom: 32px;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 40px;
-  line-height: 1.18;
-  letter-spacing: 0.02em;
-  color: var(--title-text-color);
-}
+    &:hover,
+    &:focus {
+      fill: var(--button-color);
+      outline: none;
+      transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
 
-.current {
-  color: var(--akcent-text-color);
-}
+  .mobile-menu__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
 
-.mobile-menu__tel {
-  margin-top: 302px;
-  margin-bottom: 32px;
-}
+  .mobile-menu__link {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.18;
+    letter-spacing: 0.02em;
+    color: var(--title-text-color);
+  }
 
-.mobile-menu__tel-link {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 34px;
-  line-height: 1.18;
-  letter-spacing: 0.02em;
-  color: var(--akcent-text-color);
-}
+  .mobile-menu__item .current {
+    color: var(--akcent-text-color);
+  }
 
-.mobile-menu__mail-link {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 1.17;
-  letter-spacing: 0.02em;
-  color: var(--primary-text-color);
-}
+  .mobile-menu__tel-link {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.18;
+    letter-spacing: 0.02em;
+    color: var(--akcent-text-color);
+  }
 
-.mobile-menu__social {
-  display: flex;
-  justify-content: flex-start;
-}
+  .mobile-menu__mail-link {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: var(--primary-text-color);
+  }
 
-.mobile-menu__social-item {
-  margin-top: 64px;
-}
+  .mobile-menu__social {
+    display: flex;
+    justify-content: flex-start;
+  }
 
-.mobile-menu__social-link {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 1.22;
-  letter-spacing: 0.02em;
-  color: var(--akcent-text-color);
-}
+  .mobile-menu__social-link {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    color: var(--akcent-text-color);
+    margin-right: 10px;
+  }
 
-.mobile-menu__social-link::after {
-  content: "";
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  transform: rotate(90deg);
-  margin-left: 10px;
-  margin-right: 10px;
+  .mobile-menu__social-item:not(:last-child) {
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+    margin-right: 10px;
+  }
 }
