--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,50 +1,110 @@
 .header {
   position: relative;
-  padding-top: 10px;
-  padding-bottom: 10px;
   border-bottom: 1px solid #ececec;
-
-  @media screen and (min-width: 768px) {
-    padding-top: 21px;
-    padding-bottom: 21px;
-  }
-
-  @media screen and (min-width: 1200px) {
-    padding-top: 24px;
-    padding-bottom: 24px;
-  }
 }
-
 .header__container {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.nav-list {
-  display: none;
-}
-
-.header__contacts-list {
-  display: none;
-}
-
-.header__menu-burger-btn {
-  padding: 0;
-  margin: 0;
-  border: none;
-  line-height: 0;
-  background-color: var(--fone-background-color);
-
-  &:hover,
-  &:focus {
-    fill: var(--button-color);
-    outline: none;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (max-width: 768px) {
+  .header {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .header__nav-list {
+    display: none;
   }
 
-  @media screen and (min-width: 1200px) {
+  .header__contacts-list {
     display: none;
+  }
+
+  .header__menu-burger-btn {
+    padding: 0;
+    margin: 0;
+    border: none;
+    line-height: 0;
+    background-color: var(--fone-background-color);
+
+    &:hover,
+    &:focus {
+      fill: var(--button-color);
+      outline: none;
+      transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+}
+
+// 768+
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+
+  // .mobile-menu__container {
+  //   display: none;
+  // }
+  .header {
+    padding-top: 21px;
+    padding-bottom: 21px;
+  }
+  .header__contacts-list {
+    display: flex;
+  }
+  .header__nav-list {
+    display: flex;
+    justify-content: space-between;
+    // min-width: 294px;
+    margin-left: 88px;
+  }
+
+  .header__nav-item {
+    position: relative;
+  }
+  .header__menu-burger-btn {
+    display: none;
+  }
+
+  .header__nav-link {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--title-text-color);
+
+    &:hover,
+    &:focus {
+      color: var(--akcent-text-color);
+    }
+  }
+  .header__navigation {
+    display: flex;
+    align-items: center;
+  }
+  .current {
+    color: var(--akcent-text-color);
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 4px;
+      border-radius: 2px;
+      background-color: var(--social-akcent-color);
+      bottom: -27px;
+      left: 0;
+    }
+  }
+}
+
+// 1200+
+@media screen and (min-width: 1200px) {
+  .header {
+    padding-top: 24px;
+    padding-bottom: 24px;
   }
 }
 
