--- a/css/main.css
+++ b/css/main.css
@@ -208,6 +208,9 @@ img {
   .mobile-menu__item:not(:last-child) {
     margin-bottom: 32px;
   }
+  .mobile-menu__item .current {
+    color: var(--akcent-text-color);
+  }
   .mobile-menu__link {
     font-style: normal;
     font-weight: 500;
@@ -216,8 +219,8 @@ img {
     letter-spacing: 0.02em;
     color: var(--title-text-color);
   }
-  .mobile-menu__item .current {
-    color: var(--akcent-text-color);
+  .mobile-menu__tel {
+    margin-bottom: 32px;
   }
   .mobile-menu__tel-link {
     font-style: normal;
@@ -237,7 +240,10 @@ img {
   }
   .mobile-menu__social {
     display: flex;
-    justify-content: flex-start;
+  }
+  .mobile-menu__social-item:not(:last-child) {
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+    margin-right: 10px;
   }
   .mobile-menu__social-link {
     font-style: normal;
@@ -248,9 +254,11 @@ img {
     color: var(--akcent-text-color);
     margin-right: 10px;
   }
-  .mobile-menu__social-item:not(:last-child) {
-    border-right: 1px solid rgba(33, 33, 33, 0.2);
-    margin-right: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
   }
 }
 
@@ -450,7 +458,6 @@ img {
 }
 
 .header {
-  position: relative;
   border-bottom: 1px solid #ececec;
 }
 
@@ -460,7 +467,7 @@ img {
   align-items: center;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .header {
     padding-top: 10px;
     padding-bottom: 10px;
@@ -486,28 +493,41 @@ img {
 }
 
 @media screen and (min-width: 768px) {
-  .mobile-menu {
-    display: none;
-  }
   .header {
     padding-top: 21px;
     padding-bottom: 21px;
+    height: 80px;
   }
-  .header__contacts-list {
+  .header__navigation {
     display: flex;
+    align-items: center;
   }
   .header__nav-list {
     display: flex;
-    justify-content: space-between;
     margin-left: 88px;
   }
   .header__nav-item {
     position: relative;
   }
-  .header__menu-burger-btn {
-    display: none;
+  .header__nav-item:not(:last-child) {
+    margin-right: 50px;
+  }
+  .header__nav-item .current {
+    color: var(--akcent-text-color);
+  }
+  .header__nav-item .current::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--social-akcent-color);
+    bottom: -31px;
+    left: 0;
   }
   .header__nav-link {
+    padding-top: 32px;
+    padding-bottom: 32px;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
@@ -518,29 +538,52 @@ img {
   .header__nav-link:hover, .header__nav-link:focus {
     color: var(--akcent-text-color);
   }
-  .header__navigation {
+  .header__menu-burger-btn {
+    display: none;
+  }
+  .header__contacts-link {
     display: flex;
     align-items: center;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: var(--primary-text-color);
   }
-  .current {
-    color: var(--akcent-text-color);
+  .header__contacts-icon {
+    fill: currentColor;
+    margin-right: 10px;
   }
-  .current::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: var(--social-akcent-color);
-    bottom: -27px;
-    left: 0;
+  .header__contacts-item:not(:last-child) {
+    margin-bottom: 10px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .header {
-    padding-top: 24px;
-    padding-bottom: 24px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+  .header__nav-list {
+    margin-left: 93px;
+  }
+  .header__contacts-list {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+  }
+  .header__contacts-item:not(:last-child) {
+    margin-right: 30px;
+    margin-bottom: 0;
+  }
+  .header__contacts-link {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    font-size: 14px;
+    line-height: 1.14;
+  }
+  .header__contacts-link:hover, .header__contacts-link:focus {
+    color: var(--akcent-text-color);
   }
 }
 
