--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,5 +1,4 @@
 .header {
-  position: relative;
   border-bottom: 1px solid #ececec;
 }
 .header__container {
@@ -8,11 +7,13 @@
   align-items: center;
 }
 
-@media screen and (max-width: 768px) {
+// 0-767
+@media screen and (max-width: 767px) {
   .header {
     padding-top: 10px;
     padding-bottom: 10px;
   }
+
   .header__nav-list {
     display: none;
   }
@@ -39,35 +40,48 @@
 
 // 768+
 @media screen and (min-width: 768px) {
-  .mobile-menu {
-    display: none;
-  }
-
-  // .mobile-menu__container {
-  //   display: none;
-  // }
   .header {
     padding-top: 21px;
     padding-bottom: 21px;
+    height: 80px;
   }
-  .header__contacts-list {
+
+  .header__navigation {
     display: flex;
+    align-items: center;
   }
+
   .header__nav-list {
     display: flex;
-    justify-content: space-between;
-    // min-width: 294px;
     margin-left: 88px;
   }
 
   .header__nav-item {
     position: relative;
   }
-  .header__menu-burger-btn {
-    display: none;
+
+  .header__nav-item:not(:last-child) {
+    margin-right: 50px;
+  }
+
+  .header__nav-item .current {
+    color: var(--akcent-text-color);
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 4px;
+      border-radius: 2px;
+      background-color: var(--social-akcent-color);
+      bottom: -31px;
+      left: 0;
+    }
   }
 
   .header__nav-link {
+    padding-top: 32px;
+    padding-bottom: 32px;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
@@ -80,31 +94,63 @@
       color: var(--akcent-text-color);
     }
   }
-  .header__navigation {
+
+  .header__menu-burger-btn {
+    display: none;
+  }
+
+  .header__contacts-link {
     display: flex;
     align-items: center;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: var(--primary-text-color);
   }
-  .current {
-    color: var(--akcent-text-color);
 
-    &::after {
-      content: "";
-      position: absolute;
-      width: 100%;
-      height: 4px;
-      border-radius: 2px;
-      background-color: var(--social-akcent-color);
-      bottom: -27px;
-      left: 0;
-    }
+  .header__contacts-icon {
+    fill: currentColor;
+    margin-right: 10px;
+  }
+
+  .header__contacts-item:not(:last-child) {
+    margin-bottom: 10px;
   }
 }
 
-// 1200+
+// 1200 +
 @media screen and (min-width: 1200px) {
   .header {
-    padding-top: 24px;
-    padding-bottom: 24px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
+  .header__nav-list {
+    margin-left: 93px;
+  }
+
+  .header__contacts-list {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+  }
+
+  .header__contacts-item:not(:last-child) {
+    margin-right: 30px;
+    margin-bottom: 0;
+  }
+
+  .header__contacts-link {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    font-size: 14px;
+    line-height: 1.14;
+
+    &:hover,
+    &:focus {
+      color: var(--akcent-text-color);
+    }
   }
 }
 
@@ -118,7 +164,21 @@
 // }
 
 // /*navigation*/
-// .nav-list-link {
+
+// .header__navigation {
+//   display: flex;
+//   align-items: center;
+// }
+
+// .header__nav-list {
+//   display: flex;
+// }
+
+// .header__nav-item:not(:last-child) {
+//   margin-right: 50px;
+// }
+
+// .header__nav-link {
 //   position: relative;
 //   padding-top: 32px;
 //   padding-bottom: 32px;
@@ -149,31 +209,18 @@
 //   }
 // }
 
-// .header__navigation {
-//   display: flex;
-//   align-items: center;
-// }
-
-// .nav-list {
-//   display: flex;
-// }
-
-// .nav-list-item:not(:last-child) {
-//   margin-right: 50px;
-// }
-
 // /*contacts*/
-// .contacts-header-list {
+// .header__contacts-list {
 //   display: flex;
 //   align-items: center;
 //   margin-left: auto;
 // }
 
-// .contacts-header-list-item:not(:last-child) {
+// .header__contacts-item:not(:last-child) {
 //   margin-right: 50px;
 // }
 
-// .contacts-header-list-link {
+// .header__contacts-link {
 //   display: flex;
 //   align-items: center;
 //   padding-top: 32px;
@@ -190,7 +237,7 @@
 //   }
 // }
 
-// .contact-icon-link {
+// .header__contacts-icon {
 //   fill: currentColor;
 //   margin-right: 10px;
 // }
