адаптація hero для mobile

--- a/sass/components/_logo-header.scss
+++ b/sass/components/_logo-header.scss
@@ -6,13 +6,15 @@
   line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
-
-  @media screen and (min-width: 1200px) {
-    font-size: 26px;
-    line-height: 1.19;
-  }
 }
 
 .logo-link__logo-part-one {
   color: var(--akcent-text-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .header__logo-link {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
