--- a/css/main.css
+++ b/css/main.css
@@ -140,15 +140,15 @@ img {
   color: var(--title-text-color);
 }
 
+.logo-link__logo-part-one {
+  color: var(--akcent-text-color);
+}
+
 @media screen and (min-width: 1200px) {
   .header__logo-link {
     font-size: 26px;
     line-height: 1.19;
   }
-}
-
-.logo-link__logo-part-one {
-  color: var(--akcent-text-color);
 }
 
 .footer-logo-link {
@@ -471,6 +471,7 @@ img {
   .header {
     padding-top: 10px;
     padding-bottom: 10px;
+    height: 60px;
   }
   .header__nav-list {
     display: none;
@@ -589,28 +590,22 @@ img {
 
 /*---------------hero-------------*/
 .hero {
-  max-width: 1600px;
-  max-height: 600px;
   margin: 0 auto;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero.jpg");
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
   background-size: cover;
   background-repeat: no-repeat;
   background-color: var(--main-background-color);
-  padding-top: 200px;
-  padding-bottom: 200px;
   text-align: center;
 }
 
-.hero-title {
+.hero__title {
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--main-text-color);
 }
 
-.hero-button {
+.hero__button {
   margin-right: auto;
   margin-left: auto;
   margin-top: 30px;
@@ -632,9 +627,28 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero-button:hover, .hero-button:focus {
+.hero__button:hover, .hero__button:focus {
   background-color: #188ce8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+@media screen and (max-width: 767px) {
+  .hero {
+    max-width: 480px;
+    max-height: 400px;
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
+  .hero__title {
+    font-size: 26px;
+    line-height: 1.62;
+  }
+}
+
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: url(../);
+  }
 }
 
 /*--------------specifics--------------*/
