--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,31 +1,25 @@
 /*---------------hero-------------*/
 .hero {
-  max-width: 1600px;
-  max-height: 600px;
   margin: 0 auto;
   background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url("../images/hero.jpg");
+    rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)
+  );
 
   background-size: cover;
   background-repeat: no-repeat;
   background-color: var(--main-background-color);
-  padding-top: 200px;
-  padding-bottom: 200px;
   text-align: center;
 }
-.hero-title {
+
+.hero__title {
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--main-text-color);
 }
 
-.hero-button {
+.hero__button {
   margin-right: auto;
   margin-left: auto;
   margin-top: 30px;
@@ -53,3 +47,82 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   }
 }
+
+// 0-767
+@media screen and (max-width: 767px) {
+  .hero {
+    max-width: 480px;
+    max-height: 400px;
+    padding-top: 118px;
+    padding-bottom: 118px;
+    background-image: url(/images/mobile.jpg/Header\ img.jpg);
+  }
+
+  .hero__title {
+    font-size: 26px;
+    line-height: 1.62;
+  }
+}
+
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero {
+    background-image: url(/images/mobile.jpg/Header\ img@2x.jpg);
+  }
+}
+
+// .hero {
+//   max-width: 1600px;
+//   max-height: 600px;
+//   margin: 0 auto;
+//   background-image: linear-gradient(
+//       rgba(47, 48, 58, 0.4),
+//       rgba(47, 48, 58, 0.4)
+//     ),
+//     url("../images/hero.jpg");
+
+//   background-size: cover;
+//   background-repeat: no-repeat;
+//   background-color: var(--main-background-color);
+//   padding-top: 200px;
+//   padding-bottom: 200px;
+//   text-align: center;
+// }
+// .hero__title {
+//   font-weight: 900;
+//   font-size: 44px;
+//   line-height: 1.36;
+//   letter-spacing: 0.06em;
+//   text-transform: uppercase;
+//   color: var(--main-text-color);
+// }
+
+// .hero__button {
+//   margin-right: auto;
+//   margin-left: auto;
+//   margin-top: 30px;
+//   padding: 10px 32px;
+//   min-width: 200px;
+//   border-radius: 4px;
+//   border: none;
+//   font-family: inherit;
+//   font-weight: 700;
+//   font-size: 16px;
+//   line-height: 1.88;
+//   display: flex;
+//   align-items: center;
+//   text-align: center;
+//   letter-spacing: 0.06em;
+//   cursor: pointer;
+//   color: var(--main-text-color);
+//   background-color: var(--button-color);
+//   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+//     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   &:hover,
+//   &:focus {
+//     background-color: #188ce8;
+//     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+//   }
+// }
