--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,153 +7,152 @@
   align-items: center;
 }
 
-// // 768-1199
-// @media screen and (max-width: 1199px) {
-//   .header__contacts-item:not(:last-child) {
-//     margin-bottom: 10px;
-//   }
-// }
+// 768-1199
+@media screen and (max-width: 1199px) {
+  .header__contacts-item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+  .header {
+    padding-top: 21px;
+    padding-bottom: 21px;
+  }
+}
 
-// // 0-767
-// @media screen and (max-width: 767px) {
-//   .header {
-//     padding-top: 10px;
-//     padding-bottom: 10px;
-//     height: 60px;
-//   }
+// 0-767
+@media screen and (max-width: 767px) {
+  .header {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
 
-//   .header__nav-list {
-//     display: none;
-//   }
+  .header__nav-list {
+    display: none;
+  }
 
-//   .header__contacts-list {
-//     display: none;
-//   }
+  .header__contacts-list {
+    display: none;
+  }
 
-//   .header__menu-burger-btn {
-//     padding: 0;
-//     margin: 0;
-//     border: none;
-//     line-height: 0;
-//     background-color: var(--fone-background-color);
+  .header__menu-burger-btn {
+    padding: 0;
+    margin: 0;
+    border: none;
+    line-height: 0;
+    background-color: var(--fone-background-color);
 
-//     &:hover,
-//     &:focus {
-//       fill: var(--button-color);
-//       outline: none;
-//       transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-//     }
-//   }
-// }
+    &:hover,
+    &:focus {
+      fill: var(--button-color);
+      outline: none;
+      transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+}
 
-// // 768+
-// @media screen and (min-width: 768px) {
-//   .header {
-//     padding-top: 21px;
-//     padding-bottom: 21px;
-//   }
+// 768 +
+@media screen and (min-width: 768px) {
+  .header__navigation {
+    display: flex;
+    align-items: center;
+  }
 
-//   .header__navigation {
-//     display: flex;
-//     align-items: center;
-//   }
+  .header__nav-list {
+    display: flex;
+    margin-left: 88px;
+  }
 
-//   .header__nav-list {
-//     display: flex;
-//   }
+  .header__nav-item {
+    position: relative;
+  }
 
-//   .header__nav-item {
-//     position: relative;
-//   }
+  .header__nav-item:not(:last-child) {
+    margin-right: 50px;
+  }
 
-//   .header__nav-item:not(:last-child) {
-//     margin-right: 50px;
-//   }
+  .header__nav-item .current {
+    color: var(--akcent-text-color);
 
-//   .header__nav-item .current {
-//     color: var(--akcent-text-color);
+    &::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 4px;
+      border-radius: 2px;
+      background-color: var(--social-akcent-color);
+      bottom: -1px;
+      left: 0;
+    }
+  }
 
-//     &::after {
-//       content: "";
-//       position: absolute;
-//       width: 100%;
-//       height: 4px;
-//       border-radius: 2px;
-//       background-color: var(--social-akcent-color);
-//       bottom: -31px;
-//       left: 0;
-//     }
-//   }
+  .header__nav-link {
+    position: relative;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--title-text-color);
+  }
 
-//   .header__nav-link {
-//     position: relative;
-//     padding-top: 32px;
-//     padding-bottom: 32px;
-//     font-style: normal;
-//     font-weight: 500;
-//     font-size: 14px;
-//     line-height: 1.14;
-//     letter-spacing: 0.02em;
-//     color: var(--title-text-color);
-//   }
+  .header__menu-burger-btn {
+    display: none;
+  }
 
-//   .header__menu-burger-btn {
-//     display: none;
-//   }
+  .header__contacts-link {
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: var(--primary-text-color);
+  }
 
-//   .header__contacts-link {
-//     display: flex;
-//     align-items: center;
-//     font-weight: 500;
-//     font-size: 12px;
-//     line-height: 1.17;
-//     letter-spacing: 0.02em;
-//     color: var(--primary-text-color);
-//   }
+  .header__contacts-icon {
+    fill: currentColor;
+    margin-right: 10px;
+  }
+}
 
-//   .header__contacts-icon {
-//     fill: currentColor;
-//     margin-right: 10px;
-//   }
-// }
+// 1200 +
+@media screen and (min-width: 1200px) {
+  .header__nav-link {
+    position: relative;
 
-// // 1200 +
-// @media screen and (min-width: 1200px) {
-//   .header__nav-link {
-//     position: relative;
+    &:hover,
+    &:focus {
+      color: var(--akcent-text-color);
+    }
+  }
 
-//     &:hover,
-//     &:focus {
-//       color: var(--akcent-text-color);
-//     }
-//   }
+  .header__nav-list {
+    margin-left: 93px;
+  }
 
-//   .header__nav-list {
-//     margin-left: 93px;
-//   }
+  .header__contacts-list {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+  }
 
-//   .header__contacts-list {
-//     display: flex;
-//     align-items: center;
-//     margin-left: auto;
-//   }
+  .header__contacts-item:not(:last-child) {
+    margin-right: 30px;
+  }
 
-//   .header__contacts-item:not(:last-child) {
-//     margin-right: 30px;
-//   }
+  .header__contacts-link {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    font-size: 14px;
+    line-height: 1.14;
 
-//   .header__contacts-link {
-//     padding-top: 32px;
-//     padding-bottom: 32px;
-//     font-size: 14px;
-//     line-height: 1.14;
-
-//     &:hover,
-//     &:focus {
-//       color: var(--akcent-text-color);
-//     }
-//   }
-// }
+    &:hover,
+    &:focus {
+      color: var(--akcent-text-color);
+    }
+  }
+}
 
 // /*---------------start header---------------*/
 // .header {
