--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -55,7 +55,7 @@
     max-height: 400px;
     padding-top: 118px;
     padding-bottom: 118px;
-    background-image: url(/images/mobile.jpg/Header\ img.jpg);
+    background-image: url("/images/mobile/Header-img.jpg");
   }
 
   .hero__title {
@@ -68,7 +68,7 @@
   (min-resolution: 192dpi),
   (min-resolution: 2dppx) {
   .hero {
-    background-image: url(/images/mobile.jpg/Header\ img@2x.jpg);
+    background-image: url("/images/mobile/Header-img@2x.jpg");
   }
 }
 
