--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -48,6 +48,19 @@
   }
 }
 
+// 0-1199
+@media screen and (max-width: 1199px) {
+  .hero {
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
+
+  .hero__title {
+    font-size: 26px;
+    line-height: 1.62;
+  }
+}
+
 // 0-767
 @media screen and (max-width: 767px) {
   .hero {
@@ -57,11 +70,6 @@
     padding-bottom: 118px;
     background-image: url("/images/mobile/Header-img.jpg");
   }
-
-  .hero__title {
-    font-size: 26px;
-    line-height: 1.62;
-  }
 }
 
 @media (min-device-pixel-ratio: 2),
@@ -69,6 +77,23 @@
   (min-resolution: 2dppx) {
   .hero {
     background-image: url("/images/mobile/Header-img@2x.jpg");
+  }
+}
+
+// 768 +
+@media screen and (min-width: 768px) {
+  .hero {
+    max-width: 768px;
+    max-height: 400px;
+    background-image: url("/images/tablet/Header-tablet-img.jpg");
+  }
+}
+
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero {
+    background-image: url("/images/tablet/Header-tablet-img@2x.jpg");
   }
 }
 
