--- a/css/main.css
+++ b/css/main.css
@@ -634,6 +634,7 @@ img {
 
 @media screen and (max-width: 1199px) {
   .hero {
+    max-height: 400px;
     padding-top: 118px;
     padding-bottom: 118px;
   }
@@ -646,30 +647,49 @@ img {
 @media screen and (max-width: 767px) {
   .hero {
     max-width: 480px;
-    max-height: 400px;
-    padding-top: 118px;
-    padding-bottom: 118px;
-    background-image: url("/images/mobile/Header-img.jpg");
+    background-image: url("/images/mobile/hero-img.jpg");
   }
 }
 
-@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+@media screen and (max-width: 767px) and (min-device-pixel-ratio: 2), screen and (max-width: 767px) and (min-resolution: 192dpi), screen and (max-width: 767px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: url("/images/mobile/Header-img@2x.jpg");
+    background-image: url("/images/mobile/hero-img@2x.jpg");
   }
 }
 
 @media screen and (min-width: 768px) {
   .hero {
     max-width: 768px;
-    max-height: 400px;
-    background-image: url("/images/tablet/Header-tablet-img.jpg");
+    background-image: url("/images/tablet/hero-tablet-img.jpg");
   }
 }
 
-@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: url("/images/tablet/Header-tablet-img@2x.jpg");
+    background-image: url("/images/tablet/hero-tablet-img@2x.jpg");
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    max-width: 1600px;
+    max-height: 600px;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background-image: url("/images/desktop/hero-desktop-Img.jpg");
+  }
+}
+
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: url("/images/desktop/hero-desktop-Img@2x.png");
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    font-size: 44px;
+    line-height: 1.36;
   }
 }
 
