--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -65,15 +65,15 @@
 // 0-767
 @media screen and (max-width: 767px) {
   .hero {
-    max-width: 480px;
-    background-image: url("/images/mobile/hero-img.jpg");
+    max-width: 767px;
+    background-image: url("../images/mobile/hero-img.jpg");
   }
 
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
     .hero {
-      background-image: url("/images/mobile/hero-img@2x.jpg");
+      background-image: url("../images/mobile/hero-img@2x.jpg");
     }
   }
 }
@@ -81,15 +81,15 @@
 // 768 +
 @media screen and (min-width: 768px) {
   .hero {
-    max-width: 768px;
-    background-image: url("/images/tablet/hero-tablet-img.jpg");
+    max-width: 1199px;
+    background-image: url("../images/tablet/hero-tablet-img.jpg");
   }
 
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
     .hero {
-      background-image: url("/images/tablet/hero-tablet-img@2x.jpg");
+      background-image: url("../images/tablet/hero-tablet-img@2x.jpg");
     }
   }
 }
@@ -101,14 +101,14 @@
     max-height: 600px;
     padding-top: 200px;
     padding-bottom: 200px;
-    background-image: url("/images/desktop/hero-desktop-Img.jpg");
+    background-image: url("../images/desktop/hero-desktop-Img.jpg");
   }
 
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
     .hero {
-      background-image: url("/images/desktop/hero-desktop-Img@2x.png");
+      background-image: url("../images/desktop/hero-desktop-Img@2x.png");
     }
   }
 
