--- a/sass/layout/_specifics.scss
+++ b/sass/layout/_specifics.scss
@@ -1,21 +1,9 @@
 /*--------------specifics--------------*/
-.specifics__list {
-  display: flex;
-}
-
-.specifics__item {
-  width: 270px;
-
-  &:not(:last-child) {
-    margin-right: 30px;
-  }
-}
 
 .specifics__container {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 270px;
   height: 120px;
   margin-bottom: 30px;
   background-color: var(--second-background-color);
@@ -31,3 +19,82 @@
 .specifics__text {
   line-height: 1.71;
 }
+
+@media screen and (max-width: 1199px) {
+  .specifics__section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  .specifics__list {
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+
+  .specifics__item {
+    width: calc((100% - 4 * 15px) / 2);
+    margin: 15px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .specifics__item {
+    width: 100%;
+  }
+
+  .specifics__title {
+    text-align: center;
+  }
+
+  .specifics__text {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .specifics__list {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .specifics__item {
+    width: 270px;
+
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
+}
+
+// .specifics__list {
+//   display: flex;
+// }
+
+// .specifics__item {
+//   width: 270px;
+
+//   &:not(:last-child) {
+//     margin-right: 30px;
+//   }
+// }
+
+// .specifics__container {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   width: 270px;
+//   height: 120px;
+//   margin-bottom: 30px;
+//   background-color: var(--second-background-color);
+// }
+
+// .specifics__title {
+//   margin-bottom: 10px;
+//   font-weight: 700;
+//   line-height: 1.14;
+//   text-transform: uppercase;
+// }
+
+// .specifics__text {
+//   line-height: 1.71;
+// }
