--- a/sass/layout/_specifics.scss
+++ b/sass/layout/_specifics.scss
@@ -28,11 +28,6 @@
   .specifics__list {
     flex-wrap: wrap;
   }
-
-  .specifics__item {
-    width: calc((100% - 4 * 15px) / 2);
-    margin: 15px;
-  }
 }
 
 @media screen and (max-width: 767px) {
@@ -55,15 +50,18 @@
     display: flex;
     margin: -15px;
   }
+
+  .specifics__item {
+    width: calc((100% - 4 * 15px) / 2);
+    margin: 15px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
   .specifics__item {
     width: 270px;
-
-    &:not(:last-child) {
-      margin-right: 30px;
-    }
+    margin-top: 0;
+    margin-bottom: 0;
   }
 }
 
