--- a/css/main.css
+++ b/css/main.css
@@ -146,7 +146,7 @@ img {
   color: var(--title-text-color);
 }
 
-.logo-link__logo-part-one {
+.header__logo-link_part-one {
   color: var(--akcent-text-color);
 }
 
@@ -157,16 +157,31 @@ img {
   }
 }
 
-.footer-logo-link {
+.footer__logo-link {
   display: block;
-  margin-bottom: 20px;
   font-family: var(--font-logo);
   font-style: normal;
   font-weight: 700;
-  font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
+}
+
+.footer__logo-link_part-one {
+  color: var(--akcent-text-color);
+}
+
+@media screen and (max-width: 1199px) {
+  .footer__logo-link {
+    font-size: 24px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__logo-link {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -1006,20 +1021,11 @@ img {
   padding-bottom: 60px;
 }
 
-.footer-container {
-  display: flex;
-  align-items: baseline;
+.footer__logo-link {
+  margin-bottom: 20px;
 }
 
-.adress {
-  margin-right: 70px;
-}
-
-.address-list-item:not(:last-child) {
-  margin-bottom: 9px;
-}
-
-.address-list-link {
+.footer-address__link {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -1028,11 +1034,11 @@ img {
   color: var(--main-text-color);
 }
 
-.address-list-link:hover, .address-list-link:focus {
+.footer-address__link:hover, .footer-address__link:focus {
   color: var(--akcent-text-color);
 }
 
-.address-list-link-item {
+.footer-address__link-item {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -1041,7 +1047,7 @@ img {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.address-list-link-item:hover, .address-list-link-item:focus {
+.footer-address__link-item:hover, .footer-address__link-item:focus {
   color: var(--akcent-text-color);
 }
 
@@ -1053,26 +1059,22 @@ img {
   color: var(--main-text-color);
 }
 
-.footer-social {
-  margin-right: 93px;
-}
-
-.footer-social-list {
+.footer-social__list {
   display: flex;
   justify-content: space-between;
 }
 
-.footer-social-item {
+.footer-social__item {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.footer-social-item:not(:last-child) {
+.footer-social__item:not(:last-child) {
   margin-right: 10px;
 }
 
-.footer-social-link {
+.footer-social__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1084,17 +1086,16 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-social-link:hover, .footer-social-link:focus {
+.footer-social__link:hover, .footer-social__link:focus {
   background-color: var(--social-akcent-color);
 }
 
-.footer-social-icon {
+.footer-social__icon {
   display: flex;
   justify-content: center;
 }
 
-.email-subscribe {
-  width: 358px;
+.footer-form__email-subscribe {
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
@@ -1109,10 +1110,9 @@ img {
   color: var(--main-text-color);
 }
 
-.form-btn {
-  width: 200px;
+.footer-form__btn {
+  min-width: 200px;
   height: 50px;
-  margin-left: 12px;
   border-radius: 4px;
   border: none;
   font-weight: 700;
@@ -1122,21 +1122,61 @@ img {
   color: var(--main-text-color);
   background-color: var(--button-color);
   cursor: pointer;
-}
-
-.form-btn:hover, .form-btn:focus {
-  background-color: #188ce8;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-text-icon-btn {
+.footer-form__btn:hover, .footer-form__btn:focus {
+  background-color: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.form__text-icon-btn {
   display: flex;
   justify-content: center;
 }
 
-.form-icon-send {
+.form__icon-send {
   margin-left: 10px;
+}
+
+@media screen and (max-width: 1199px) {
+  .footer-address {
+    margin-bottom: 60px;
+    text-align: center;
+  }
+  .footer-address__item:not(:last-child) {
+    margin-bottom: 8px;
+  }
+  .footer-social {
+    width: 206px;
+    height: 80px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 60px;
+    margin-left: auto;
+    margin-right: 65px;
+  }
+  .footer-text {
+    text-align: center;
+  }
+  .form {
+    display: block;
+  }
+  .footer-form__btn {
+    display: block;
+    margin-top: 20px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer-social {
+    margin-right: auto;
+  }
+  .footer-form__email-subscribe {
+    width: 100%;
+  }
 }
 
 /*-----------------------start Portfolio-----------------------*/
