--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,24 +1,16 @@
 /*----------------footer----------------*/
+
 .footer {
   background-color: var(--main-background-color);
   padding-top: 60px;
   padding-bottom: 60px;
 }
 
-.footer-container {
-  display: flex;
-  align-items: baseline;
+.footer__logo-link {
+  margin-bottom: 20px;
 }
 
-.adress {
-  margin-right: 70px;
-}
-
-.address-list-item:not(:last-child) {
-  margin-bottom: 9px;
-}
-
-.address-list-link {
+.footer-address__link {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -32,7 +24,7 @@
   }
 }
 
-.address-list-link-item {
+.footer-address__link-item {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -54,16 +46,12 @@
   color: var(--main-text-color);
 }
 
-.footer-social {
-  margin-right: 93px;
-}
-
-.footer-social-list {
+.footer-social__list {
   display: flex;
   justify-content: space-between;
 }
 
-.footer-social-item {
+.footer-social__item {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -73,7 +61,7 @@
   }
 }
 
-.footer-social-link {
+.footer-social__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -90,13 +78,12 @@
   }
 }
 
-.footer-social-icon {
+.footer-social__icon {
   display: flex;
   justify-content: center;
 }
 
-.email-subscribe {
-  width: 358px;
+.footer-form__email-subscribe {
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
@@ -111,10 +98,10 @@
   color: var(--main-text-color);
 }
 
-.form-btn {
-  width: 200px;
+.footer-form__btn {
+  min-width: 200px;
   height: 50px;
-  margin-left: 12px;
+
   border-radius: 4px;
   border: none;
   font-weight: 700;
@@ -124,21 +111,210 @@
   color: var(--main-text-color);
   background-color: var(--button-color);
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
     background-color: #188ce8;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
 
-.form-text-icon-btn {
+.form__text-icon-btn {
   display: flex;
   justify-content: center;
 }
 
-.form-icon-send {
+.form__icon-send {
   margin-left: 10px;
 }
+
+@media screen and (max-width: 1199px) {
+  .footer-address {
+    margin-bottom: 60px;
+    text-align: center;
+  }
+
+  .footer-address__item:not(:last-child) {
+    margin-bottom: 8px;
+  }
+
+  .footer-social {
+    width: 206px;
+    height: 80px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 60px;
+    margin-left: auto;
+    margin-right: 65px;
+  }
+
+  .footer-text {
+    text-align: center;
+  }
+
+  .form {
+    display: block;
+  }
+
+  .footer-form__btn {
+    display: block;
+    margin-top: 20px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer-social {
+    margin-right: auto;
+  }
+
+  .footer-form__email-subscribe {
+    width: 100%;
+  }
+}
+// .footer {
+//   background-color: var(--main-background-color);
+//   padding-top: 60px;
+//   padding-bottom: 60px;
+// }
+
+// .footer-container {
+//   display: flex;
+//   align-items: baseline;
+// }
+
+// .footer-address {
+//   margin-right: 70px;
+// }
+
+// .footer-address__item:not(:last-child) {
+//   margin-bottom: 9px;
+// }
+
+// .footer-address__link {
+//   font-style: normal;
+//   font-weight: 400;
+//   font-size: 14px;
+//   line-height: 1.71;
+//   letter-spacing: 0.03em;
+//   color: var(--main-text-color);
+
+//   &:hover,
+//   &:focus {
+//     color: var(--akcent-text-color);
+//   }
+// }
+
+// .footer-address__link-item {
+//   font-style: normal;
+//   font-weight: 400;
+//   font-size: 14px;
+//   line-height: 1.71;
+//   letter-spacing: 0.03em;
+//   color: rgba(255, 255, 255, 0.6);
+
+//   &:hover,
+//   &:focus {
+//     color: var(--akcent-text-color);
+//   }
+// }
+
+// .footer-text {
+//   margin-bottom: 20px;
+//   font-weight: 700;
+//   line-height: 1.14;
+//   text-transform: uppercase;
+//   color: var(--main-text-color);
+// }
+
+// .footer-social {
+//   margin-right: 93px;
+// }
+
+// .footer-social__list {
+//   display: flex;
+//   justify-content: space-between;
+// }
+
+// .footer-social__item {
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: center;
+
+//   &:not(:last-child) {
+//     margin-right: 10px;
+//   }
+// }
+
+// .footer-social__link {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   width: 44px;
+//   height: 44px;
+//   border-radius: 50%;
+//   fill: var(--main-text-color);
+//   background-color: rgba(255, 255, 255, 0.1);
+//   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   &:hover,
+//   &:focus {
+//     background-color: var(--social-akcent-color);
+//   }
+// }
+
+// .footer-social__icon {
+//   display: flex;
+//   justify-content: center;
+// }
+
+// .footer__email-subscribe {
+//   width: 358px;
+//   height: 50px;
+//   border: 1px solid rgba(255, 255, 255, 0.3);
+//   box-sizing: border-box;
+//   border-radius: 4px;
+//   background: none;
+//   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+//   padding-left: 16px;
+//   font-weight: 400;
+//   font-size: 16px;
+//   line-height: 1.25;
+//   letter-spacing: 0.03em;
+//   color: var(--main-text-color);
+// }
+
+// .form__btn {
+//   width: 200px;
+//   height: 50px;
+//   margin-left: 12px;
+//   border-radius: 4px;
+//   border: none;
+//   font-weight: 700;
+//   font-size: 16px;
+//   line-height: 1.88;
+//   letter-spacing: 0.06em;
+//   color: var(--main-text-color);
+//   background-color: var(--button-color);
+//   cursor: pointer;
+
+//   &:hover,
+//   &:focus {
+//     background-color: #188ce8;
+//     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+//     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+//       box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   }
+// }
+
+// .form__text-icon-btn {
+//   display: flex;
+//   justify-content: center;
+// }
+
+// .form__icon-send {
+//   margin-left: 10px;
+// }
