--- a/css/main.css
+++ b/css/main.css
@@ -504,6 +504,7 @@ img {
   }
 }
 
+/*---------------start header---------------*/
 .header {
   border-bottom: 1px solid #ececec;
 }
@@ -1243,17 +1244,17 @@ img {
 
 /*-----------------------start Portfolio-----------------------*/
 /*------filter------*/
-.filter-list {
+.filter__list {
   display: flex;
   justify-content: center;
 }
 
-.filter-list-item {
+.filter__item {
   margin-right: 8px;
   margin-bottom: 50px;
 }
 
-.filter-list-button {
+.filter__button {
   padding-top: 6px;
   padding-bottom: 6px;
   padding-left: 22px;
@@ -1271,42 +1272,42 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.filter-list-button:hover, .filter-list-button:focus {
+.filter__button:hover, .filter__button:focus {
   color: var(--main-text-color);
   background-color: var(--button-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /*------projects------*/
-.projects-list {
+.projects__list {
   display: flex;
   flex-wrap: wrap;
   margin-left: -30px;
   margin-top: -30px;
 }
 
-.projects-list-item {
+.projects__item {
   flex-basis: calc((100% - 90px) / 3);
   margin-left: 30px;
   margin-top: 30px;
 }
 
-.projects-list-link {
+.projects__link {
   display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.projects-list-link:hover, .projects-list-link:focus {
+.projects__link:hover, .projects__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.project-description {
+.project__description {
   padding: 20px 24px;
   border: 1px solid var(--border-color);
   border-top: none;
 }
 
-.projects-item-title {
+.projects__item-title {
   margin-bottom: 4px;
   font-style: normal;
   font-weight: 700;
@@ -1330,7 +1331,7 @@ img {
   overflow: hidden;
 }
 
-.overlay {
+.projects__overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -1346,8 +1347,8 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.projects-list-link:hover .overlay,
-.projects-list-link:focus .overlay {
+.projects-list-link:hover .projects__overlay,
+.projects-list-link:focus .projects__overlay {
   transform: translate(0);
 }
 
