--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,3 +1,4 @@
+/*---------------start header---------------*/
 .header {
   border-bottom: 1px solid #ececec;
 }
@@ -153,91 +154,3 @@
     }
   }
 }
-
-// /*---------------start header---------------*/
-// .header {
-//   border-bottom: 1px solid #ececec;
-// }
-
-// .header__container {
-//   display: flex;
-// }
-
-// /*navigation*/
-
-// .header__navigation {
-//   display: flex;
-//   align-items: center;
-// }
-
-// .header__nav-list {
-//   display: flex;
-// }
-
-// .header__nav-item:not(:last-child) {
-//   margin-right: 50px;
-// }
-
-// .header__nav-link {
-//   position: relative;
-//   padding-top: 32px;
-//   padding-bottom: 32px;
-//   font-weight: 500;
-//   font-size: 14px;
-//   line-height: 1.14;
-//   letter-spacing: 0.02em;
-//   color: var(--title-text-color);
-
-//   &:hover,
-//   &:focus {
-//     color: var(--akcent-text-color);
-//   }
-// }
-
-// .current {
-//   color: var(--akcent-text-color);
-
-//   &::after {
-//     content: "";
-//     width: 100%;
-//     height: 4px;
-//     border-radius: 2px;
-//     background-color: var(--social-akcent-color);
-//     position: absolute;
-//     bottom: -3px;
-//     left: 0;
-//   }
-// }
-
-// /*contacts*/
-// .header__contacts-list {
-//   display: flex;
-//   align-items: center;
-//   margin-left: auto;
-// }
-
-// .header__contacts-item:not(:last-child) {
-//   margin-right: 50px;
-// }
-
-// .header__contacts-link {
-//   display: flex;
-//   align-items: center;
-//   padding-top: 32px;
-//   padding-bottom: 32px;
-//   font-weight: 500;
-//   font-size: 14px;
-//   line-height: 1.4;
-//   letter-spacing: 0.02em;
-//   color: var(--primary-text-color);
-
-//   &:hover,
-//   &:focus {
-//     color: var(--akcent-text-color);
-//   }
-// }
-
-// .header__contacts-icon {
-//   fill: currentColor;
-//   margin-right: 10px;
-// }
