--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -64,7 +64,7 @@
   }
 }
 
-.project__description {
+.projects__description {
   padding: 20px 24px;
   border: 1px solid var(--border-color);
   border-top: none;
