--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -213,6 +213,12 @@
   }
 }
 
+@media screen and (max-width: 449px) {
+  .modal {
+    width: 100%;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .modal {
     width: 528px;
