--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -2,14 +2,26 @@
 .hero {
   margin: 0 auto;
   background-image: linear-gradient(
-    rgba(47, 48, 58, 0.4),
-    rgba(47, 48, 58, 0.4)
-  );
-
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("../images/mobile/hero-img.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-color: var(--main-background-color);
   text-align: center;
+}
+
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/mobile/hero-img@2x.jpg");
+  }
 }
 
 .hero__title {
@@ -51,6 +63,7 @@
 // 0-1199
 @media screen and (max-width: 1199px) {
   .hero {
+    width: 100%;
     max-height: 400px;
     padding-top: 118px;
     padding-bottom: 118px;
@@ -62,34 +75,25 @@
   }
 }
 
-// 0-767
-@media screen and (max-width: 767px) {
-  .hero {
-    max-width: 767px;
-    background-image: url("../images/mobile/hero-img.jpg");
-  }
-
-  @media (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-    .hero {
-      background-image: url("../images/mobile/hero-img@2x.jpg");
-    }
-  }
-}
-
 // 768 +
 @media screen and (min-width: 768px) {
   .hero {
-    max-width: 1199px;
-    background-image: url("../images/tablet/hero-tablet-img.jpg");
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/tablet/hero-tablet-img.jpg");
   }
 
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
     .hero {
-      background-image: url("../images/tablet/hero-tablet-img@2x.jpg");
+      background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url("../images/tablet/hero-tablet-img@2x.jpg");
     }
   }
 }
@@ -101,14 +105,22 @@
     max-height: 600px;
     padding-top: 200px;
     padding-bottom: 200px;
-    background-image: url("../images/desktop/hero-desktop-Img.jpg");
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/desktop/hero-desktop-Img.jpg");
   }
 
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
     .hero {
-      background-image: url("../images/desktop/hero-desktop-Img@2x.png");
+      background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url("../images/desktop/hero-desktop-Img@2x.png");
     }
   }
 
